package com.vehiclerental.domain;

public enum IncidentType {
    ACCIDENT,
    VIOLATION
}
