package com.vehiclerental.domain;

public enum MaintenanceStatus {
    PENDING,
    COMPLETED
}
