package com.vehiclerental.domain;

public enum VehicleStatus {
    AVAILABLE,
    RENTED,
    MAINTENANCE,
    UNAVAILABLE
}
